--- a/Barcaliente.WebUI/Views/Home/Index.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 					 <a href="#"><span>+1 234</span> 567 8901</a>
 				 </div>
 				 <div class="clear"></div>
-				 <h1><a href="index.html"><img src="images/logo.png" alt=""></a></h1>
+				 <h1><a href="index.html"><img src="~/Content/images/logo.png" alt=""></a></h1>
 				 <nav> 
 				   <ul class="sf-menu responsive-menu">
 					   <li class="current"><a href="index.html">Home</a><strong></strong></li>
@@ -41,10 +41,10 @@
 	  <article class="grid_12">        
 		 <div id="slide">
 		   <div class="slider camera_wrap camera_azure_skin" id="camera">
-			   <div data-src="images/slide.jpg"></div>
-			   <div data-src="images/slide-1.jpg"></div>
-			   <div data-src="images/slide-2.jpg"></div>
-			   <div data-src="images/slide-3.jpg"></div>
+			   <div data-src="Content/images/slide.jpg"></div>
+			   <div data-src="Content/images/slide-1.jpg"></div>
+			   <div data-src="Content/images/slide-2.jpg"></div>
+			   <div data-src="Content/images/slide-3.jpg"></div>
 		   </div>
 		 </div>
 	  </article> 
@@ -106,7 +106,7 @@
 		<div class="grid_3">
 		   <div class="inner-block">
 			 <figure>
-					 <img src="images/page-img.jpg" alt="">
+					 <img src="~/Content/images/page-img.jpg" alt="">
 			 </figure>
 			 <div class="block-3">
 				 <span class="font-14">Excepteur sint occaecat cupidatat non proident</span>
@@ -122,7 +122,7 @@
 		<div class="grid_3">
 		   <div class="inner-block">
 			 <figure>
-					 <img src="images/page-img-1.jpg" alt="">
+					 <img src="~/Content/images/page-img-1.jpg" alt="">
 			 </figure>
 			 <div class="block-3">
 				 <span class="font-14">Sint occaecat cupidatat non proident</span>
@@ -138,7 +138,7 @@
 		<div class="grid_3">
 		   <div class="inner-block">
 			 <figure>
-					 <img src="images/page-img-2.jpg" alt="">
+					 <img src="~/Content/images/page-img-2.jpg" alt="">
 			 </figure>
 			 <div class="block-3">
 				 <span class="font-14">Occaecat cupidatat non proident</span>
@@ -155,7 +155,7 @@
 		<div class="grid_3">
 		   <div class="inner-block">
 			 <figure>
-					 <img src="images/page-img-3.jpg" alt="">
+					 <img src="~/Content/images/page-img-3.jpg" alt="">
 			 </figure>
 			 <div class="block-3">
 				 <span class="font-14">Lorem set sint occaecat cupidatat non proident</span>
