--- a/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
+++ b/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
@@ -7,8 +7,8 @@
 	<meta name="description" content="Your description">
 	<meta name="keywords" content="Your keywords">
 	<meta name="author" content="Your name">
-	<link rel="stylesheet" href="~/Content/camera-slider.css">
-	<link rel="stylesheet" type="text/css" media="screen" href="~/Content/style.css">
+	<link rel="stylesheet" href="~/Content/css/camera-slider.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="~/Content/css/style.css">
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" /> 
 	<script src="~/Scripts/jquery-1.7.1.min.js"></script>
@@ -46,7 +46,7 @@
 	<![endif]-->
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="~/Scripts/html5.js"></script>
-		<link rel="stylesheet" type="text/css" media="screen" href="~/Content/ie.css">
+		<link rel="stylesheet" type="text/css" media="screen" href="~/Content/css/ie.css">
 	<![endif]-->
 </head>
 <body>
