--- a/Barcaliente.WebUI/Views/Home/Index.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Index.cshtml
@@ -1,173 +1,136 @@
-﻿<div class="head">	     
-		 <div class="container_12">
-		   <article class="grid_12">
-			 <div class="inner-block">
-			   <header>
-				 <div class="login">
-					<em><a href="#">Login</a></em> <em><a href="#">Create  an  Account</a></em>
-				 </div>
-				 <div class="order">
-					 <em>Order Delivery</em>
-					 <a href="#"><span>+1 234</span> 567 8901</a>
-				 </div>
-				 <div class="clear"></div>
-				 <h1><a href="index.html"><img src="~/Content/images/logo.png" alt=""></a></h1>
-				 <nav> 
-				   <ul class="sf-menu responsive-menu">
-					   <li class="current"><a href="index.html">Home</a><strong></strong></li>
-						<li><a href="index-1.html">About</a><strong></strong></li>
-						<li class='sub-menu'><a href="index-2.html">Menu &amp; Specials</a><strong> </strong>
-						  <ul>
-							<li><a href="#">Excepteur</a></li>
-							 <li><a href="#">Sint occaecat</a></li>
-							 <li><a href="#">Cupidatat</a></li>
-							 <li><a href="#">Non proident</a></li>
-						  </ul>
-						</li>
-						<li><a href="index-3.html">Our Gallery</a><strong></strong></li>
-						<li><a href="index-4.html">Price List</a><strong></strong></li> 
-						<li><a href="index-5.html">Order Now</a><strong></strong></li>
-						<li><a href="index-6.html">Contacts</a><strong></strong></li>
-					</ul>
-				  </nav>
-				<div class="clear"></div>
-					 </header>
-			 </div>
-		   </article>
-		   <div class="clear"></div>
-		 </div>
-		 <div class="main-slide">
-   <div class="container_12">
-	  <article class="grid_12">        
-		 <div id="slide">
-		   <div class="slider camera_wrap camera_azure_skin" id="camera">
-			   <div data-src="Content/images/slide.jpg"></div>
-			   <div data-src="Content/images/slide-1.jpg"></div>
-			   <div data-src="Content/images/slide-2.jpg"></div>
-			   <div data-src="Content/images/slide-3.jpg"></div>
-		   </div>
-		 </div>
-	  </article> 
-	   <div class="clear"></div> 
-	</div>   
-	   </div>
-	  <div class="box">
-		  <div class="container_12">
-				<div class="grid_4">
-					  <div class="block">
-						 <strong></strong>
-						 <div class="inner">
-							  <span>Gift</span><br>
-							  <em>Certificates</em><br>
-							  <p>Purchase a gift which can be presented at any of our locations.</p>
-							  <div class="div-button">
-								<a href="#">Order Now!</a>
-							  </div>
-						 </div>
-					  </div>
-				</div>
-				<div class="grid_4">
-					  <div class="block-1">
-						 <strong></strong>
-						 <div class="inner">
-							  <span>Lunch</span><br>
-							  <em>Special</em><br>
-							  <p>Choose your favourite dish and we'll deliver it right to your door!</p>
-							  <div class="div-button">
-								<a href="#">Order Now!</a>
-							  </div>
-						 </div>
-					  </div>
-				</div>                
-				<div class="grid_4">
-					  <div class="block-2">
-						 <strong></strong>
-						 <div class="inner">
-							  <span>Catering</span><br>
-							  <p>With years of catering experience, Food Delivery will not disappoint!</p>
-							  <div class="div-button">
-								<a href="#">read more</a>
-							  </div>
-						 </div>
-					  </div>
-				</div>
-			 <div class="clear"></div>
-		  </div>
-	  </div>      
-   </div> 
-		<!--==============================content================================-->
-<section id="content">         
-  <div class="container_12">
-		<div class="grid_12">
-			<div class="inner-block">
-			  <h2 class="bg-h2">Featured <span>products</span></h2>
-			</div>
-		</div>
-		<div class="grid_3">
-		   <div class="inner-block">
-			 <figure>
-					 <img src="~/Content/images/page-img.jpg" alt="">
-			 </figure>
-			 <div class="block-3">
-				 <span class="font-14">Excepteur sint occaecat cupidatat non proident</span>
-			 </div>
-			 <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
-			 <span class="cost fleft">
-				 <em>$</em>25<strong>.89</strong>
-			 </span>
-			 <a href="#" class="button fright top">Order Now!</a>
-			 <div class="clear"></div>
-		   </div>
-		</div>        
-		<div class="grid_3">
-		   <div class="inner-block">
-			 <figure>
-					 <img src="~/Content/images/page-img-1.jpg" alt="">
-			 </figure>
-			 <div class="block-3">
-				 <span class="font-14">Sint occaecat cupidatat non proident</span>
-			 </div>
-			 <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
-			 <span class="cost fleft">
-				 <em>$</em>25<strong>.89</strong>
-			 </span>
-			 <a href="#" class="button fright top">Order Now!</a>
-			 <div class="clear"></div>
-		   </div>
-		</div>        
-		<div class="grid_3">
-		   <div class="inner-block">
-			 <figure>
-					 <img src="~/Content/images/page-img-2.jpg" alt="">
-			 </figure>
-			 <div class="block-3">
-				 <span class="font-14">Occaecat cupidatat non proident</span>
-			 </div>
-			 <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
-			 <span class="cost fleft">
-				 <em>$</em>25<strong>.89</strong>
-			 </span>
-			 <a href="#" class="button fright top">Order Now!</a>
-			 <div class="clear"></div>
-		   </div>
-		</div>
-		
-		<div class="grid_3">
-		   <div class="inner-block">
-			 <figure>
-					 <img src="~/Content/images/page-img-3.jpg" alt="">
-			 </figure>
-			 <div class="block-3">
-				 <span class="font-14">Lorem set sint occaecat cupidatat non proident</span>
-			 </div>
-			 <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
-			 <span class="cost fleft">
-				 <em>$</em>25<strong>.89</strong>
-			 </span>
-			 <a href="#" class="button fright top">Order Now!</a>
-			 <div class="clear"></div>
-		   </div>
-		</div>         
-	 <div class="clear"></div>
-  </div>
+﻿<!-- image slider -->
+<div class="main-slide">
+    <div class="container_12">
+        <article class="grid_12">
+            <div id="slide">
+                <div class="slider camera_wrap camera_azure_skin" id="camera">
+                    <div data-src="Content/images/slide.jpg"></div>
+                    <div data-src="Content/images/slide-1.jpg"></div>
+                    <div data-src="Content/images/slide-2.jpg"></div>
+                    <div data-src="Content/images/slide-3.jpg"></div>
+                </div>
+            </div>
+        </article>
+        <div class="clear"></div>
+    </div>
+</div>
+<div class="box">
+    <div class="container_12">
+        <div class="grid_4">
+            <div class="block">
+                <strong></strong>
+                <div class="inner">
+                    <span>Gift</span><br>
+                    <em>Certificates</em><br>
+                    <p>Purchase a gift which can be presented at any of our locations.</p>
+                    <div class="div-button">
+                        <a href="#">Order Now!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="grid_4">
+            <div class="block-1">
+                <strong></strong>
+                <div class="inner">
+                    <span>Lunch</span><br>
+                    <em>Special</em><br>
+                    <p>Choose your favourite dish and we'll deliver it right to your door!</p>
+                    <div class="div-button">
+                        <a href="#">Order Now!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="grid_4">
+            <div class="block-2">
+                <strong></strong>
+                <div class="inner">
+                    <span>Catering</span><br>
+                    <p>With years of catering experience, Food Delivery will not disappoint!</p>
+                    <div class="div-button">
+                        <a href="#">read more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="clear"></div>
+    </div>
+</div>
+
+<!--==============================content================================-->
+<section id="content">
+    <div class="container_12">
+        <div class="grid_12">
+            <div class="inner-block">
+                <h2 class="bg-h2">Featured <span>products</span></h2>
+            </div>
+        </div>
+        <div class="grid_3">
+            <div class="inner-block">
+                <figure>
+                    <img src="~/Content/images/page-img.jpg" alt="">
+                </figure>
+                <div class="block-3">
+                    <span class="font-14">Excepteur sint occaecat cupidatat non proident</span>
+                </div>
+                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+                <span class="cost fleft">
+                    <em>$</em>25<strong>.89</strong>
+                </span>
+                <a href="#" class="button fright top">Order Now!</a>
+                <div class="clear"></div>
+            </div>
+        </div>
+        <div class="grid_3">
+            <div class="inner-block">
+                <figure>
+                    <img src="~/Content/images/page-img-1.jpg" alt="">
+                </figure>
+                <div class="block-3">
+                    <span class="font-14">Sint occaecat cupidatat non proident</span>
+                </div>
+                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+                <span class="cost fleft">
+                    <em>$</em>25<strong>.89</strong>
+                </span>
+                <a href="#" class="button fright top">Order Now!</a>
+                <div class="clear"></div>
+            </div>
+        </div>
+        <div class="grid_3">
+            <div class="inner-block">
+                <figure>
+                    <img src="~/Content/images/page-img-2.jpg" alt="">
+                </figure>
+                <div class="block-3">
+                    <span class="font-14">Occaecat cupidatat non proident</span>
+                </div>
+                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+                <span class="cost fleft">
+                    <em>$</em>25<strong>.89</strong>
+                </span>
+                <a href="#" class="button fright top">Order Now!</a>
+                <div class="clear"></div>
+            </div>
+        </div>
+
+        <div class="grid_3">
+            <div class="inner-block">
+                <figure>
+                    <img src="~/Content/images/page-img-3.jpg" alt="">
+                </figure>
+                <div class="block-3">
+                    <span class="font-14">Lorem set sint occaecat cupidatat non proident</span>
+                </div>
+                <p>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+                <span class="cost fleft">
+                    <em>$</em>25<strong>.89</strong>
+                </span>
+                <a href="#" class="button fright top">Order Now!</a>
+                <div class="clear"></div>
+            </div>
+        </div>
+        <div class="clear"></div>
+    </div>
 </section>
