fixed repeated js for gallery

--- a/Barcaliente.WebUI/Views/Home/Gallery.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Gallery.cshtml
@@ -42,3 +42,14 @@
        <div class="clear"></div>
   </div>
 </section>
+<script>
+        $(window).load(function () {
+            jQuery('#camera').camera({
+                pagination: false,
+                navigation: true,
+                transPeriod: 2000,
+                fx: 'simpleFade',
+                time: 7000
+            });
+        });
+</script>
