--- a/Barcaliente.WebUI/Views/Home/Index.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Index.cshtml
@@ -134,3 +134,14 @@
         <div class="clear"></div>
     </div>
 </section>
+<script>
+        $(window).load(function () {
+            jQuery('#camera').camera({
+                pagination: true,
+                navigation: false,
+                transPeriod: 2000,
+                fx: 'simpleFade',
+                time: 7000
+            });
+        });
+</script>
