pobieranie dan z bazy, zmodyfkowane linki do kategoerii dan, itp

--- a/Barcaliente.WebUI/Views/Home/Menu.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Menu.cshtml
@@ -3,61 +3,61 @@
     <div class="container_12">
         <div class="grid_8">
             <div class="inner-block">
-                <h2 class="padd">Look Through <span>Our Menu</span></h2>
+                <h2 class="padd">Przejżyj <span>Nasze Menu</span></h2>
                 <div class="height"></div>
                 <div class="box-2" id="bg">
                     <div class="inner-1">
-                        <a href="#">Pizza</a><br>
+                        @Html.ActionLink("Pizza", "MenuCategory", "Home", new {categoryName = "Pizza"}, null)<br>
                     </div>
                 </div>
                 <div class="box-2" id="bg-4">
                     <div class="inner-1">
-                        <a href="#">Fast <span>Food</span></a><br>
+                        @Html.ActionLink("Fast Food", "MenuCategory", "Home", new {categoryName = "Fast Food"}, null)<br>
                     </div>
                 </div>
                 <div class="box-2" id="bg-1">
                     <div class="inner-1">
-                        <a href="#">Nasze <span>specjały</span></a><br>
+                        @Html.ActionLink("Nasze specjały", "MenuCategory", "Home", new {categoryName = "Nasze specjały"}, null)<br>
                     </div>
                 </div>
                 <div class="box-2" id="bg-3">
                     <div class="inner-1">
-                        <a href="#">Sałatki</a><br>
+                        @Html.ActionLink("Sałatki", "MenuCategory", "Home", new {categoryName = "Sałatki"}, null)<br>
                     </div>
                 </div>
                 <div class="box-2" id="bg-7">
                     <div class="inner-1">
-                        <a href="#">Mięsa</a><br>
+                        @Html.ActionLink("Mięsa", "MenuCategory", "Home", new {categoryName = "Mięsa"}, null)<br>
                     </div>
                 </div>
                 <div class="box-2" id="bg-5">
                     <div class="inner-1">
-                        <a href="#">Owoce <span>Morza</span></a><br>
+                        @Html.ActionLink("Owoce morza", "MenuCategory", "Home", new {categoryName = "Owoce morza"}, null)<br>
                     </div>
                 </div>
                 <div class="box-2" id="bg-6">
                     <div class="inner-1">
-                        <a href="#">Pasty</a><br>
+                        @Html.ActionLink("Pasty", "MenuCategory", "Home", new {categoryName = "Pasty"}, null)<br>
                     </div>
                 </div>
                 <div class="box-2" id="bg-2">
                     <div class="inner-1">
-                        <a href="#">Dodatki</a><br>
+                        @Html.ActionLink("Dodatki", "MenuCategory", "Home", new {categoryName = "Dodatki"}, null)<br>
                     </div>
                 </div>
                 <div class="box-2" id="bg-1">
                     <div class="inner-1">
-                        <a href="#">Sosy</a><br>
+                        @Html.ActionLink("Sosy", "MenuCategory", "Home", new {categoryName = "Sosy"}, null)<br>
                     </div>
                 </div>                
                 <div class="box-2" id="bg-3">
                     <div class="inner-1">
-                        <a href="#">Napoje <span>Gorące</span></a><br>
+                        @Html.ActionLink("Napoje gorące", "MenuCategory", "Home", new {categoryName = "Napoje gorące"}, null)<br>
                     </div>
                 </div>
                 <div class="box-2" id="bg-3">
                     <div class="inner-1">
-                        <a href="#">Napoje <span>Zimne</span></a><br>
+                        @Html.ActionLink("Napoje zimne", "MenuCategory", "Home", new {categoryName = "Napoje zimne"}, null)<br>
                     </div>
                 </div>
             </div>
