--- a/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
+++ b/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
@@ -59,17 +59,17 @@
                                     <li>@Html.ActionLink("Home", "Index", "Home")<strong></strong></li>
                                     <li class='sub-menu'>@Html.ActionLink("Menu", "Menu", "Home")<strong></strong>
                                         <ul>
-                                            <li><a href="#">Pizza</a></li>
-                                            <li><a href="#">Fast Food</a></li>
-                                            <li><a href="#">Nasze specjały</a></li>
-                                            <li><a href="#">Sałatki</a></li>
-                                            <li><a href="#">Mięsa</a></li>
-                                            <li><a href="#">Owoce morza</a></li>
-                                            <li><a href="#">Pasty</a></li>
-                                            <li><a href="#">Dodatki</a></li>
-                                            <li><a href="#">Sosy</a></li>
-                                            <li><a href="#">Napoje gorące</a></li>
-                                            <li><a href="#">Napoje zimne</a></li>
+                                            <li>@Html.ActionLink("Pizza", "MenuCategory", "Home", new {categoryName = "Pizza"}, null)</li>
+                                            <li>@Html.ActionLink("Fast Food", "MenuCategory", "Home", new {categoryName = "Fast Food"}, null)</li>
+                                            <li>@Html.ActionLink("Nasze specjały", "MenuCategory", "Home", new {categoryName = "Nasze specjały"}, null)</li>
+                                            <li>@Html.ActionLink("Sałatki", "MenuCategory", "Home", new {categoryName = "Sałatki"}, null)</li>
+                                            <li>@Html.ActionLink("Mięsa", "MenuCategory", "Home", new {categoryName = "Mięsa"}, null)</li>
+                                            <li>@Html.ActionLink("Owoce morza", "MenuCategory", "Home", new {categoryName = "Owoce morza"}, null)</li>
+                                            <li>@Html.ActionLink("Pasty", "MenuCategory", "Home", new {categoryName = "Pasty"}, null)</li>
+                                            <li>@Html.ActionLink("Dodatki", "MenuCategory", "Home", new {categoryName = "Dodatki"}, null)</li>
+                                            <li>@Html.ActionLink("Sosy", "MenuCategory", "Home", new {categoryName = "Sosy"}, null)</li>
+                                            <li>@Html.ActionLink("Napoje gorące", "MenuCategory", "Home", new {categoryName = "Napoje gorące"}, null)</li>
+                                            <li>@Html.ActionLink("Napoje zimne", "MenuCategory", "Home", new {categoryName = "Napoje zimne"}, null)</li>
                                         </ul>
                                     </li>
                                     <li>@Html.ActionLink("Dowóz nocny", "NightOrders", "Home")<strong></strong></li>
