fixed html container for few pages

--- a/Barcaliente.WebUI/Views/Home/SpecialOrders.cshtml
+++ b/Barcaliente.WebUI/Views/Home/SpecialOrders.cshtml
@@ -1,5 +1,7 @@
 ﻿<section id="content">
     <div class="container_12">
-        <h2>SpecialOrders</h2>
+        <div class="grid_12">
+            <h2>SpecialOrders</h2>
+        </div>
     </div>
 </section>
