poprawiony komunikat o braku posiłków  w danej kategorii

--- a/Barcaliente.WebUI/Views/Home/NoMealsIncategory.cshtml
+++ b/Barcaliente.WebUI/Views/Home/NoMealsIncategory.cshtml
@@ -1,8 +1,9 @@
-﻿<section id="content">
+﻿@model string
+<section id="content">
     <div class="container_12">
         <div class="grid_12">
             <h2>Uuups!</h2>
-            <span class="font-14">Wygląda na to, że nie ma posiłków w kategorii którą wybrałeś...</span>
+            <span class="font-14">Wygląda na to, że nie mamy posiłków w kategorii @Model...</span>
         </div>
     </div>
 </section>
