barcaliente 2013 in footer

--- a/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
+++ b/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
@@ -103,7 +103,7 @@
                         </ul>
                         <div class="inner-block">
                             <p>
-                                Food delivery &copy; 2013&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="index-7.html">Privacy Policy</a>
+                                BarCaliente &copy; 2013
                                 <br>
                                 <!--{%FOOTER_LINK} -->
                             </p>
