--- a/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
+++ b/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
@@ -57,8 +57,8 @@
                                 <img src="~/Content/images/logo.png" alt=""></a></h1>
                             <nav>
                                 <ul class="sf-menu responsive-menu">
-                                    <li>@Html.MenuItem("Home", "Index", "Home")<strong></strong></li>
-                                    <li class='sub-menu'>@Html.MenuItem("Menu", "Menu", "Home")<strong></strong>
+                                    @Html.MenuItem("Home", "Index", "Home")<strong></strong>
+                                    @*<li class='sub-menu'>@Html.MenuItem("Menu", "Menu", "Home")<strong></strong>
                                         <ul>
                                             <li>@Html.ActionLink("Pizza", "MenuCategory", "Home", new {categoryName = "Pizza"}, null)</li>
                                             <li>@Html.ActionLink("Fast Food", "MenuCategory", "Home", new {categoryName = "Fast Food"}, null)</li>
@@ -72,12 +72,12 @@
                                             <li>@Html.ActionLink("Napoje gorące", "MenuCategory", "Home", new {categoryName = "Napoje gorące"}, null)</li>
                                             <li>@Html.ActionLink("Napoje zimne", "MenuCategory", "Home", new {categoryName = "Napoje zimne"}, null)</li>
                                         </ul>
-                                    </li>
-                                    <li>@Html.MenuItem("Dowóz nocny", "NightOrders", "Home")<strong></strong></li>
-                                    <li>@Html.MenuItem("Zamówienia specjalne", "SpecialOrders", "Home")<strong></strong></li>
-                                    <li>@Html.MenuItem("Galeria", "Gallery", "Home")<strong></strong></li>
-                                    <li>@Html.MenuItem("Kontakt", "Contact", "Home")<strong></strong></li>
-                                    <li>@Html.MenuItem("Praca", "Work", "Home")<strong></strong></li>
+                                    </li>*@
+                                    @Html.MenuItem("Dowóz nocny", "NightOrders", "Home")<strong></strong>
+                                    @Html.MenuItem("Zamówienia specjalne", "SpecialOrders", "Home")<strong></strong>
+                                    @Html.MenuItem("Galeria", "Gallery", "Home")<strong></strong>
+                                    @Html.MenuItem("Kontakt", "Contact", "Home")<strong></strong>
+                                    @Html.MenuItem("Praca", "Work", "Home")<strong></strong>
                                 </ul>
                             </nav>
                             <div class="clear"></div>
