few images, subpages text by requirenments

--- a/Barcaliente.WebUI/Views/Home/Contact.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Contact.cshtml
@@ -1,22 +1,37 @@
-﻿<section id="content">         
-  <div class="container_12">
-     <div class="wrapper">
-         <div class="grid_12">
-             <div class="inner-block">
-               <h2 class="padd">Jak <span>nas znaleźć</span></h2>
-               <figure class="top-7 fleft p8">
-                 <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.pl/maps?q=%C5%BBytnia+4+84-120+W%C5%82adys%C5%82awowo&amp;ie=UTF8&amp;hq=&amp;hnear=%C5%BBytnia+4,+84-120+W%C5%82adys%C5%82awowo,+pucki,+pomorskie&amp;t=v&amp;z=14&amp;ll=54.790413,18.400148&amp;output=embed"></iframe><br /><small><a href="https://maps.google.pl/maps?q=%C5%BBytnia+4+84-120+W%C5%82adys%C5%82awowo&amp;ie=UTF8&amp;hq=&amp;hnear=%C5%BBytnia+4,+84-120+W%C5%82adys%C5%82awowo,+pucki,+pomorskie&amp;t=v&amp;z=14&amp;ll=54.790413,18.400148&amp;source=embed" style="color:#0000FF;text-align:left">Wyświetl większą mapę</a></small>
-               </figure>
-               <div class="adress-div">
-                  <p>Sed in lacus ut enim adipiscing aliquet. Nulla venenatis. In pede mi, aliquet sit amet, euismod in, auctor ut, ligula. Aliquam dapibus tincidunt metus. </p>
-                  <dl class="adress">
-                               <dt class="title1">Żytnia 4,<br> 84-120 Władysławowo</dt>
-                                   <dd><span>Telefon:</span>602 411 484</dd>
-                  </dl>
-               </div>
-               <div class="clear"></div>
-               
-         
-     </div><!--the end of wrapper-->
-  </div>
+﻿<section id="content">
+    <div class="container_12">
+        <div class="wrapper">
+            <div class="grid_12">
+                <div class="inner-block">
+                    <h2 class="padd">Jak <span>nas znaleźć</span></h2>
+                    <figure class="top-7 fleft p8">
+                        <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.pl/maps?f=q&amp;source=s_q&amp;hl=pl&amp;geocode=&amp;q=%C5%BBytnia+2,+W%C5%82adys%C5%82awowo&amp;aq=&amp;sll=54.790413,18.400148&amp;sspn=0.007819,0.026157&amp;t=v&amp;ie=UTF8&amp;hq=&amp;hnear=%C5%BBytnia+2,+84-120+W%C5%82adys%C5%82awowo,+pucki,+pomorskie&amp;z=14&amp;ll=54.790623,18.400186&amp;output=embed"></iframe>
+                        <br />
+                        <small><a href="https://maps.google.pl/maps?f=q&amp;source=embed&amp;hl=pl&amp;geocode=&amp;q=%C5%BBytnia+2,+W%C5%82adys%C5%82awowo&amp;aq=&amp;sll=54.790413,18.400148&amp;sspn=0.007819,0.026157&amp;t=v&amp;ie=UTF8&amp;hq=&amp;hnear=%C5%BBytnia+2,+84-120+W%C5%82adys%C5%82awowo,+pucki,+pomorskie&amp;z=14&amp;ll=54.790623,18.400186" style="color: #0000FF; text-align: left">Wyświetl większą mapę</a></small>
+                    </figure>
+                    <div class="adress-div">
+                        <p>Bar Caliente to lokal gastronomiczny oferujący pizze, dania z grilla, specjały kuchni meksykańskiej oraz pasty. Wszystkie dania z karty przygotowywane są według tradycyjnych receptur przez szefa kuchni wyłącznie ze świeżych produktów.Wychodzimy naprzeciw oczekiwaniom naszych gosci ,kwestia smaku jest dla nas najwazniejsza ... </p>
+                        <dl class="adress">
+                            <dt class="title1">Żytnia 2,<br>
+                                84-120 Władysławowo</dt>
+                            <dd><span>Telefon:</span>690 907 690</dd>
+                        </dl>
+                        <p>Dostawa od godziny 13 do 22.</p>
+                        <p>Zamówienia przyjmujemy do godziny 21.30</p>
+                        <p>Minimalna kwota zamówienia na telefon  20 zł</p>
+                        <p>Na terenie Władysławowa dowóz gratis</p>
+                        <p>Dopłaty do dowozu:</p>
+                        <ul>
+                            <li>Chłapowo +5zł</li>
+                            <li>Łebcz +5zł</li>
+                            <li>Swarzewo +5zł</li>
+                            <li>Chałupy +10zł</li>
+                        </ul>
+                        <p>Kierowca posiada przy sobie bilon o wartości 40zł</p>
+                    </div>                    
+                    <div class="clear"></div>
+
+                </div>
+                <!--the end of wrapper-->
+            </div>
 </section>
