--- a/Barcaliente.WebUI/Views/Home/Gallery.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Gallery.cshtml
@@ -4,36 +4,30 @@
            <div class="inner-block">
              <div id="slide-1">
                            <div class="slider-1" id="camera">
-                    <div data-src="/Content/images/page-4-slide.jpg">
+                    <div data-src="/Content/images/gallery/DSC_3157.jpg">
                        <div class="banner camera_caption fadeFromBottom">
-                           <h2>lobster <span>dinner</span></h2>
-                           <span class='text20'>Image 1 of 5</span>
+                           @*<h2>lobster <span>dinner</span></h2>*@
+                           @*<span class='text20'>Image 1 of 5</span>*@
                        </div>
                     </div>
-                    <div data-src="/Content/images/page-4-slide-1.jpg">
+                    <div data-src="/Content/images/gallery/DSC_3158.jpg">
                           <div class="banner camera_caption fadeFromBottom">
-                             <h2>meat <span>lunch</span></h2>
-                             <span class='text20'>Image 2 of 5</span>
+                             @*<h2>meat <span>lunch</span></h2>*@
+                             @*<span class='text20'>Image 2 of 5</span>*@
                          </div>
                     </div>      
-                    <div data-src="/Content/images/page-4-slide-2.jpg">
+                    <div data-src="/Content/images/gallery/DSC_3165.jpg">
                         <div class="banner camera_caption fadeFromBottom">
                            <h2>fish <span>dinner</span></h2>
-                           <span class='text20'>Image 3 of 5</span>
+                           @*<span class='text20'>Image 3 of 5</span>*@
                        </div>
                     </div>
-                    <div data-src="/Content/images/page-4-slide-3.jpg">
+                    <div data-src="/Content/images/gallery/DSC_3167.jpg">
                         <div class="banner camera_caption fadeFromBottom">
-                           <h2>morning  <span>salad</span></h2>
-                           <span class='text20'>Image 4 of 5</span>
+                           @*<h2>morning  <span>salad</span></h2>*@
+                           @*<span class='text20'>Image 4 of 5</span>*@
                        </div>
                     </div>
-                    <div data-src="/Content/images/page-4-slide-4.jpg">
-                      <div class="banner camera_caption fadeFromBottom">
-                         <h2>vegetables  <span>for dinner</span></h2>
-                         <span class='text20'>Image 5 of 5</span>
-                     </div>
-                    </div> 
                            </div>                           
                    </div>
            </div>
