--- a/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
+++ b/Barcaliente.WebUI/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                         <header>
                             <div class="order">
                                 <em>Zamów teraz!</em>
-                                <a href="#"><span>602</span> 411 484</a>
+                                <a href="#"><span>690</span> 907 690</a>
                             </div>
                             <div class="clear"></div>
                             <h1><a href="index.html">
@@ -58,8 +58,8 @@
                             <nav>
                                 <ul class="sf-menu responsive-menu">
                                     @Html.MenuItem("Home", "Index", "Home")<strong></strong>
-                                    @*<li class='sub-menu'>@Html.MenuItem("Menu", "Menu", "Home")<strong></strong>
-                                        <ul>
+                                    <li>@Html.MenuItem("Menu", "Menu", "Home")<strong></strong>
+                                        @*<ul>
                                             <li>@Html.ActionLink("Pizza", "MenuCategory", "Home", new {categoryName = "Pizza"}, null)</li>
                                             <li>@Html.ActionLink("Fast Food", "MenuCategory", "Home", new {categoryName = "Fast Food"}, null)</li>
                                             <li>@Html.ActionLink("Nasze specjały", "MenuCategory", "Home", new {categoryName = "Nasze specjały"}, null)</li>
@@ -71,8 +71,8 @@
                                             <li>@Html.ActionLink("Sosy", "MenuCategory", "Home", new {categoryName = "Sosy"}, null)</li>
                                             <li>@Html.ActionLink("Napoje gorące", "MenuCategory", "Home", new {categoryName = "Napoje gorące"}, null)</li>
                                             <li>@Html.ActionLink("Napoje zimne", "MenuCategory", "Home", new {categoryName = "Napoje zimne"}, null)</li>
-                                        </ul>
-                                    </li>*@
+                                        </ul>*@
+                                    </li>
                                     @Html.MenuItem("Dowóz nocny", "NightOrders", "Home")<strong></strong>
                                     @Html.MenuItem("Zamówienia specjalne", "SpecialOrders", "Home")<strong></strong>
                                     @Html.MenuItem("Galeria", "Gallery", "Home")<strong></strong>
