--- a/Barcaliente.WebUI/Views/Home/NightOrders.cshtml
+++ b/Barcaliente.WebUI/Views/Home/NightOrders.cshtml
@@ -2,6 +2,7 @@
     <div class="container_12">
         <div class="grid_12">
             <h2>NightOrders</h2>
+            <p class="top">w przygotowaniu...</p>
         </div>
     </div>
 </section>
