--- a/Barcaliente.WebUI/Views/Home/Work.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Work.cshtml
@@ -2,5 +2,6 @@
     <div class="container_12">
 	    <div class="grid_12">
         <h2>Work</h2>
+            <p class="top">Poszukujemy osób na stanowiska : kucharz ,pomoc kuchenna, kierowca-dostawca . osoby zainteresowane pracą prosimy o wysyłanie cv na adres <a href='mailto://thomikwla@gmail.com'>thomikwla@gmail.com</a></p>
     </div>
 </section>
