menu page sidebar reduction

--- a/Barcaliente.WebUI/Views/Home/Menu.cshtml
+++ b/Barcaliente.WebUI/Views/Home/Menu.cshtml
@@ -64,12 +64,12 @@
         </div>
         <div class="grid_4">
             <div class="inner-block">
-                <h2 class="padd">weekday <span>specials</span></h2>
+                <h2 class="padd">Smacznego!</span></h2>
                 <div class="height"></div>
                 <figure>
                     <img src="~/Content/images/page-2-img-9.jpg" alt="">
                 </figure>
-                <p class="top bot-1">
+                @*<p class="top bot-1">
                     Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
              Fusce euismod consequat ante.
                 </p>
@@ -102,7 +102,7 @@
                         </div>
                         <div class="clear"></div>
                     </div>
-                </div>
+                </div>*@
             </div>
         </div>
         <div class="clear"></div>
